crates/toml_edit/tests/snapshots/invalid/local-date/month-under.stderr
TOML parse error at line 2, column 5
  |
2 | d = 2007-00-01
  |     ^^^^^^^^^^
invalid date, expected month between 01 and 12
